# jair_ros2_training

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  param_file  pyproject.toml  requirements.txt  ros_settings.sh  run.py
.devcontainer/: Dockerfile  devcontainer.json  setup_devcontainer.sh
.github/workflows/: ci.yaml
deploy/: Dockerfile
production/: Dockerfile
src/: README.md  run.launch.py  run.py  run.sh
src/image_feeder/: package.xml  setup.cfg  setup.py
src/jair_turtlesim/: package.xml  setup.cfg  setup.py
src/jair_turtlesim/follower/: ball_tracker.py  follower.py  img_detection.py  pid.py  tracker.py
src/jair_turtlesim/image_feeder/: image_feeder.py  image_generator.py
src/jair_turtlesim/jair_turtlesim/: ball_tracker.py  follower.py  pid.py
src/jair_turtlesim/test/: conftest.py  test_ball_generation.py  test_ball_pos_extract.py  test_ball_tracker.py  test_ball_tracking.py  test_flake8.py  test_normalize.py  test_pid.py  test_tracking.py  test_turtle_errors.py
