[project]
name = "name"
version = "0.0.0"
description = "Consolidated configuration with single-quote enforcement"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Enables rules for pyupgrade (UP), isort (I), and autoflake-like behavior (F)
select = ["E", "F", "UP", "I", "COM"]
ignore = ["D100", "D104"]

[tool.ruff.format]
# Matches double-quote-string-fixer to prevent hook conflicts
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
install_types = true
non_interactive = true
disallow_subclassing_any = false

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = [
    "C0114", # missing-module-docstring
    "C0116", # missing-function-docstring
    "E0401", # import-error
    "missing-class-docstring",
    "unused-variable",
    "redefined-builtin",
    "broad-exception-caught",
    "too-many-instance-attributes",
    "attribute-defined-outside-init",
    "unrecognized-inline-option"
]

[tool.autopep8]
max_line_length = 120
aggressive = 3
in-place = true
